<resources>
    <string name="app_name">Morpion</string>
    <string name="action_settings">Settings</string>
    <string name="btn_login">Se connecter</string>
    <string name="btn_register">S\'inscrire</string>
    <string name="register_title">Inscription</string>
    <string name="pseudo">Pseudo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password2">Retapez votre password</string>
    <string name="register">S\'inscrire</string>
    <string name="login_title">Connexion</string>
    <string name="login">Connexion</string>
    <string name="logout">Deconnexion</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="deja_a">Joueur(s) déjà affronté(s)</string>
    <string name="pas_deja_a">Joueur(s) pas encore affronté(s)</string>
    <string name="c_est_partie">C\'est partie !</string>
    <string name="retour">Retour</string>
    <string name="tv_ajouter">Pas de joueur(s) à affronté(s) ? Inscrit en un autre ici.</string>
    <string name="btn_ajouter">Ajouter</string>
    <string name="stat">Voir les statistiques de :</string>
    <string name="btn_stat">voir les statistiques</string>
    <string name="tv_tduel">Nombre de duel joués :</string>
    <string name="tv_tduelv">Nombre de duel gagnés :</string>
</resources>
